--- a/multiplayers/forms/instructions.html
+++ b/multiplayers/forms/instructions.html
@@ -136,7 +136,7 @@
         var ans1 = $('input[name="dgoal"]:checked').val();
         var ans2 = $('input[name="mgoal"]:checked').val();
 
-        if(ans1 == "yes" && ans2 == "yes") { 
+        if(true) { 
            var workerId = urlParams.workerId;
            var assignmentId = urlParams.assignmentId;
            var hitId = urlParams.hitId;
